# nr5103e-sdk

./: AGENTS.md  README.md  copilot-setup-steps.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  ci.yml  copilot-setup-steps.yml  release.yaml  release.yml
src/nr5103e_sdk/: client.py
tests/: test_client.py
